Added Bootstrap and styled the application (responsively)

--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,25 +1,6 @@
-<%= form_for(project) do |f| %>
-  <% if project.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(project.errors.count, "error") %>
-        prohibited this project from being saved:</h2>
-      <ul>
-        <% @project.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-        <li>
-      </ul>
-    </div>
-<% end %>
-  <p>
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </p>
+<%= simple_form_for(project) do |f| %>
+  <%= f.input :name %><br />
+  <%= f.input :description %><br />
 
-  <p>
-    <%= f.label :description %><br />
-    <%= f.text_field :description %></br />
-  </p>
-
-  <%= f.submit %>
+  <%= f.submit "#{project.new_record? ? "Create" : "Update"} Project", class: "btn-primary" %>
 <% end %>
