--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,8 +1,9 @@
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 @import 'font-awesome';
-@import 'responsive';
 @import 'projects';
+@import 'tickets';
+@import 'responsive';
 
 header {
   @extend .page-header;
